# ddd-library-test-assignment

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
core/api/: main.py
core/api/authors/: router.py
core/api/books/: router.py
core/api/schemas/: author_schemas.py  book_schemas.py  user_schemas.py
core/api/users/: router.py
core/common/exceptions/: base.py  common.py  common_exceptions.py  infra_exceptions.py
core/common/filters/: filters.py
core/common/settings/: config.py
core/exceptions/domain/: base.py  books.py  users.py
core/exceptions/infra/: base.py  handlers.py
core/exceptions/logic/: auth.py  base.py
core/infra/db/sql_db/: base.py  models.py
core/infra/domain/entities/: authors.py  base.py  books.py  enums.py  users.py
core/infra/domain/events/: base.py
core/infra/domain/values/: authors.py  base.py  books.py  enums.py  users.py
core/infra/repositories/: base_sql_repository.py  database_config.py
core/infra/repositories/authors/: authors_repository.py
core/infra/repositories/books/: books_repository.py
core/infra/repositories/users/: users_repository.py
core/infra/services/: hash_service.py  jwt_service.py
core/logic/: container.py  mediator.py
core/logic/commands/: base.py
core/tests/domain/entities/: test_books.py  (+1 more)
docker_compose/: docker_compose_app.yaml  docker_compose_storages.yaml
migrations/: env.py
migrations/versions/: 135233902318_fix_models.py  2133a5dabe66_initial_tables.py  5adcf559fb60_merge_users_and_book_authors_migrations.py
(+9 files in other folders)
