[tool.poetry]
name = "ddd-library"
version = "0.1.0"
description = ""
authors = ["defaultftxuser <banginlord@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.1"}
orjson = "^3.10.7"
punq = "^0.7.0"


[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
